--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(https://api.fonts.coollabs.io/css?family=Raleway:300,900);
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,900');
 @import url('https://api.fonts.coollabs.io/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Quattrocento+Sans');
